# gridd-unlock-patcher

./: CODEOWNERS  README.md  windows-replace-nvxdapix.ps1
src/: CMakeLists.txt  build.sh  gridd-unlock-patcher.cpp  nls-root_ca-certificates.hpp
